--- a/helidon-config-ldap/build.gradle
+++ b/helidon-config-ldap/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'org.ldaptive:ldaptive:1.2.4'
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
+    testImplementation 'com.unboundid:unboundid-ldapsdk:4.0.14'
 
 }
 
